--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">FiveGoodThingsAndroid</string>
     <string name="current_feeling">How are you feeling today?</string>
     <string name="button_next">Next</string>
+    <string name="good_thing_hint">Enter good thing...</string>
 </resources>
