Adding DoneActivity class and layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="current_feeling">How are you feeling today?</string>
     <string name="button_next">Next</string>
     <string name="good_thing_hint">Enter good thing...</string>
+    <string name="done_message">Done for the day!</string>
 </resources>
