--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="button_next">Next</string>
     <string name="good_thing_hint">Enter good thing...</string>
     <string name="done_message">Done for the day!</string>
+    <string name="channel_name">testing</string>
+    <string name="channel_description">testing description</string>
 </resources>
